<resources>
    <string name="app_name">ProjetMobile</string>

    <string name="bgChessContentDescription">Beatifull backgroud of a 3D render of a bad chess game</string>
    <string name="logoChessContentDescription">The amazing logo of Chessburger 2</string>

    <string name="connection">connexion</string>
    <string name="offline">hors ligne</string>
    <string name="avatar_content_description">The avatar</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="email">Adresse email</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="connect">Se connecter</string>
    <string name="createAccount">créer un compte</string>
    <string name="missing_informations">Il manque des informations</string>
    <string name="forgot_psw">Mot de passe oublié</string>
    <string name="forgot_psw_msgtoast">Un mail a été envoyé à l\'adresse du compte : </string>
    <string name="forgot_psw_msgtoast_nopseudo">Veuillez renseigner un pseudo pour effectuer la récupération</string>
    <string name="back">Retour</string>
    <string name="online">En ligne</string>
    <string name="local">Local</string>
    <string name="profile">Profil</string>
    <string name="ranked">classé</string>
    <string name="friend">Amical</string>
    <string name="jumble_content_description">A jumble of chess pieces</string>
    <string name="crown_content_description">A little crown</string>
    <string name="default_elo">1337</string>
    <string name="default_pseudo">DarkVirgil34</string>
    <string name="default_description">G@meur mystérieux ...</string>
    <string name="biography">Biographie</string>
    <string name="peferences">Préférences</string>
    <string name="games_history">Historique des parties</string>
    <string name="ranking">Classement</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="edit_icon_content_description">Iconne pour éditer</string>
    <string name="confirm">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="friend_match">Match amical</string>
    <string name="warning">Attention</string>
    <string name="deleteAccountWarningSpeech">Vous êtes sur le point de supprimer votre compte, il ne sera plus possible de retourner en arrière après ça.</string>
    <string name="winner_pseudo">ChessMaster12</string>
    <string name="winner_elo">1927</string>
    <string name="cup_bg_content_description">A cup in one color</string>
    <string name="title_activity_history_dialog">HistoryDialogActivity</string>
    <string name="history">Historique</string>
    <string name="star_content_description">A star that represent a win</string>
    <string name="blue_arrow_content_description">A blue arrow</string>
    <string name="cross_lose_content_description">A cross that represent a lose</string>
    <string name="time">Temps</string>
    <string name="turn_number">Nombre de coups</string>
    <string name="win_type">Type de victoire</string>
    <string name="lose_type">Type de défaite</string>
    <string name="profile_picture">Photo de profil</string>
    <string name="search_image">Chercher une image</string>
    <string name="directory_content_description">A folder icon</string>
    <string name="selection">Selection</string>
    <string name="change_game_mode">Changer de\nmode de jeu</string>
    <string name="change_game_mode_inline">Changer de mode de jeu</string>
    <string name="try_again">Recommencer</string>
    <string name="quit">Quitter</string>
    <string name="game_mode">Mode de jeu</string>
    <string name="waiting_for_acceptation">EN ATTENTE DE L\'ACCEPTATION</string>
    <string name="watermark">ADACorp™</string>
    <string name="try_again_warning">Pour recommencer, vous êtes sur le point de vous rendre. Ça serait dommage de laisser votre adversaire l’emporter si facilement</string>
    <string name="quit_warning">Pour quitter, vous êtes sur le point de vous rendre. Ça serait dommage de laisser votre adversaire l’emporter si facilement</string>

    <string name="finish_screen_start">Partie termininée</string>
    <string name="finish_screen_winnerOne_end">a gagné</string>
    <string name="finish_screen_winnerMany_end">ont gagné</string>
    <string name="finish_screen_draw_end">égalité</string>
    <string name="on_board_screen">Veuillez choisir une pièce</string>
    <string name="game_list">Liste des parties</string>
    <string name="sync_content_description">Synchronizer la liste des parties</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_game_name">Very cool game</string>
    <string name="default_game_mode">Standard</string>
    <string name="game_name">Nom de la partie</string>
    <string name="confirm_back_press">Appuyez encore sur retour pour quitter.</string>
    <string name="wrong_pasword">Mauvais mot de passe. Réessayez.</string>
    <string name="game_full">Partie pleine !</string>
    <string name="game_animation">Animations de jeu</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="authentication_failed">"Echec d'authentification. "</string>
    <string name="pasword_too_short">Mot de passe trop court (6 character minimum).</string>
    <string name="unaivailable_email">Email invalide.</string>
</resources>