<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:src="@drawable/dark_default_avatar"
            android:contentDescription="@string/avatar_content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/permanent_marker"
                android:text="@string/default_pseudo"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/crown"
                    android:contentDescription="@string/crown_content_description" />

                <TextView
                    android:id="@+id/textViewPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_elo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_description"
            android:padding="8dp"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:background="@drawable/magenta_background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/preferencesButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:iconSize="48dp"
            app:iconPadding="32dp"
            app:iconTint="#FFF"
            app:iconTintMode="multiply"
            app:icon="@drawable/gear"
            android:text="@string/peferences" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/historyButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/games_history"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:icon="@drawable/book"
            app:iconPadding="32dp"
            app:iconSize="48dp"
            app:iconTint="#FFF"
            app:iconTintMode="multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rankingButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:iconSize="48dp"
            app:iconPadding="32dp"
            app:iconTint="#FFF"
            app:iconTintMode="multiply"
            app:icon="@drawable/cup"
            android:text="@string/ranking"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:iconSize="48dp"
            app:iconPadding="32dp"
            app:iconTint="#FFF"
            app:iconTintMode="multiply"
            app:icon="@drawable/no"
            android:text="@string/delete_account"/>

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/magentaFonce"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/back"
        android:textSize="36sp" />

</LinearLayout>