<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    tools:context=".SetProfilePictureDialogActivity"
    android:layout_margin="@dimen/fab_margin"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/dialog_title_width"
        android:layout_height="@dimen/dialog_title_height"
        style="@style/dialog_title"
        android:text="@string/profile_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/dialog_body"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/setFileButton"
                android:layout_width="@dimen/picture_small"
                android:layout_height="@dimen/picture_small"
                android:scaleType="fitCenter"
                android:layout_marginEnd="@dimen/common_margin"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:src="@drawable/directory"
                android:contentDescription="@string/directory_content_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_btn_menu"
                android:background="?attr/colorOnPrimary"
                android:textColor="?attr/colorSecondaryVariant"
                android:text="@string/search_image" />
        </LinearLayout>

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="@dimen/picture_large"
            android:layout_height="@dimen/picture_large"
            android:src="@drawable/dark_default_avatar"
            android:contentDescription="@string/avatar_content_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_btn_row"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            android:layout_marginEnd="@dimen/dialog_btn_space"
            style="@style/dialog_btn"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            style="@style/dialog_btn"
            android:text="@string/cancel" />

    </LinearLayout>



</LinearLayout>