<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    android:gravity="center">

    <Button
        android:id="@+id/onlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        style="@style/btn_menu_default"
        android:text="@string/online" />

    <Button
        android:id="@+id/localButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        style="@style/btn_menu_default"
        android:text="@string/local" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        style="@style/btn_menu_default"
        android:text="@string/profile" />

</LinearLayout>