<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    tools:context=".EditTextDialogActivity"
    android:layout_margin="@dimen/fab_margin"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="@dimen/dialog_title_width"
        android:layout_height="@dimen/dialog_title_height"
        style="@style/dialog_title"
        android:text="@string/pseudo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/dialog_body">

        <EditText
            android:id="@+id/editTextTextPseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/editText_min_height"
            android:padding="@dimen/padding_btn_menu"
            android:background="@color/white"
            android:textColor="?attr/colorSecondaryVariant"
            android:inputType="textPersonName"
            android:text="@string/default_pseudo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_btn_row"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dialog_btn_space"
            android:backgroundTint="@color/bleuFonce"
            style="@style/dialog_btn"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            style="@style/dialog_btn"
            android:text="@string/cancel" />

    </LinearLayout>



</LinearLayout>