<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    tools:context=".ClassementDialogActivity"
    android:layout_margin="16dp"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:translationY="25dp"
        android:translationZ="1dp"
        android:background="@color/bleuFonce"
        android:textColor="@color/white"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center"
        android:text="@string/ranking"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="41dp"
        android:layout_weight="1"
        android:scrollbarThumbVertical="@color/bleuFonce"
        android:background="@color/bleu">

        <LinearLayout
            android:id="@+id/rankingFragmentReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cup_bg"
                    android:contentDescription="@string/cup_bg_content_description" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/magentaFonce"
                    android:fontFamily="@font/permanent_marker"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:translationX="-50dp"
                    android:text="@string/winner_elo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:textColor="@color/bleuFonce"
                    android:textSize="16sp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="16sp"
                    android:text="@string/winner_pseudo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cup_bg"
                    android:contentDescription="@string/cup_bg_content_description" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/magentaFonce"
                    android:fontFamily="@font/permanent_marker"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:translationX="-50dp"
                    android:text="@string/default_elo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:textColor="@color/magentaFonce"
                    android:textSize="16sp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="16sp"
                    android:text="@string/default_pseudo" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:translationY="-25dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            android:textColor="@color/white"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

    </LinearLayout>




</LinearLayout>