<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    tools:context=".SetFriendPseudoActivity"
    android:layout_margin="16dp"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:translationY="25dp"
        android:translationZ="1dp"
        android:background="@color/bleuFonce"
        android:textColor="@color/white"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center"
        android:text="@string/pseudo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="41dp"
        android:background="@color/bleu">

        <EditText
            android:id="@+id/editTextTextPseudo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:text="@string/default_pseudo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:translationY="-25dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            android:layout_marginRight="32dp"
            android:textColor="@color/white"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bleuFonce"
            android:textColor="@color/white"
            android:fontFamily="@font/permanent_marker"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp" />

    </LinearLayout>



</LinearLayout>